<resources>
    <string name="app_name">companymanager</string>
    <string name="title_activity_main__page">Welcome to Duma Chemicals</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="title_activity_main__menu">Main Menu</string>
    <string name="title_activity_customer_page">Customers</string>
    <string name="title_activity_customer__details">Customer Details</string>
    <string name="title_activity_orders__page">Orders</string>
    <string name="title_activity_order__details">Order Details</string>
    <string name="resBtnSignInMain">Sign In</string>
    <string name="resSignInHeader">Sign In</string>
    <string name="resBtnLogIn">Log In</string>
    <string name="resTxtUsername"></string>
    <string name="resTxtPassword"></string>
    <string name="resMainMenuHeader">Main Menu</string>
    <string name="resBtnCustomersMain">Customers</string>
    <string name="resBtnOrdersMain">Orders</string>
    <string name="resBtnExitMain">Back</string>
    <string name="resCustomersHeader">Customers</string>
    <string name="resTxtCustomerDetailsHeader">Customer Details</string>
    <string name="resLblCustName">Name:</string>
    <string name="resLblCustSurname">Surname:</string>
    <string name="resLblCustPhone">Phone Number:</string>
    <string name="resLblCustEmail">e-mail:</string>
    <string name="resLblCustAddress">Address:</string>
    <string name="resBtnSaveCustomerDetails">Save</string>
    <string name="resBtnCancelCustomerEdit">Cancel</string>
    <string name="resBtnAddCustomer">Add</string>
    <string name="title_activity_main">Home</string>
    <string name="resBtnExitApp">Exit</string>
</resources>
