<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cput.ac.za.companymanager.Views.Customer_Details"
    android:background="#3fa5ff"
    android:id="@+id/cutomerPageLayout">

    TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:id="@+id/imgLogoCustomerDetails"
        android:src="@drawable/mylogo"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/resTxtCustomerDetailsHeader"
        android:id="@+id/txtCustomerDetailsHeader"
        android:layout_alignTop="@+id/imgLogoCustomerDetails"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/resLblCustName"
        android:id="@+id/txtCustomerName"
        android:layout_below="@+id/imgLogoCustomerDetails"
        android:layout_alignParentStart="false"
        android:layout_marginTop="51dp" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/resLblCustSurname"
        android:id="@+id/txtCustomerSurname"
        android:layout_below="@+id/txtCustomerName"
        android:layout_alignParentStart="false" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/resLblCustPhone"
        android:id="@+id/txtPhoneNumber"
        android:layout_below="@+id/txtCustomerSurname"
        android:layout_alignParentStart="false" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/resLblCustEmail"
        android:id="@+id/txtEmail"
        android:layout_below="@+id/txtPhoneNumber"
        android:layout_alignParentStart="false" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/resLblCustAddress"
        android:id="@+id/txtAddress"
        android:layout_below="@+id/txtEmail"
        android:layout_alignParentStart="false" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/ptCustSurname"
        android:background="#f3ffff"
        android:layout_below="@+id/txtCustomerName"
        android:layout_alignStart="@+id/ptCustName" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:id="@+id/ptCustName"
        android:background="#f3ffff"
        android:layout_alignTop="@+id/txtCustomerName"
        android:layout_toEndOf="@+id/txtCustomerName"
        android:layout_marginStart="37dp" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/ptPhoneNumber"
        android:background="#f3ffff"
        android:layout_below="@+id/txtCustomerSurname"
        android:layout_alignStart="@+id/ptCustSurname" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/ptEmail"
        android:background="#f3ffff"
        android:layout_below="@+id/txtPhoneNumber"
        android:layout_alignStart="@+id/ptPhoneNumber" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/ptAddress"
        android:background="#f3ffff"
        android:layout_below="@+id/txtEmail"
        android:layout_alignStart="@+id/ptEmail" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resBtnSaveCustomerDetails"
        android:id="@+id/btnSaveCustomerDetails"
        android:layout_below="@+id/txtAddress"
        android:layout_toStartOf="@+id/ptAddress" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resBtnCancelCustomerEdit"
        android:id="@+id/btnCancelCustomerDetails"
        android:layout_below="@+id/txtAddress"
        android:layout_alignEnd="@+id/ptAddress" />

</RelativeLayout>
